--- a/.env.dev
+++ b/.env.dev
@@ -1,20 +1,20 @@
 REACT_APP_ENV_NAME=dev
 
-REACT_APP_TRANSITLOG_SERVER=https://dev.reittiloki.hsl.fi/server/
-REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://dev.reittiloki.hsl.fi/server/graphql/
-REACT_APP_TRANSITLOG=https://dev.reittiloki.hsl.fi
+REACT_APP_TRANSITLOG_SERVER=https://devtest.reittiloki.hsl.fi/server/
+REACT_APP_TRANSITLOG_SERVER_GRAPHQL=https://devtest.reittiloki.hsl.fi/server/graphql/
+REACT_APP_TRANSITLOG=https://devtest.reittiloki.hsl.fi
 
 # Auth
 REACT_APP_AUTH_URI=https://hslid-uat.cinfra.fi/openid/auth
 REACT_APP_CLIENT_ID=7510123698297597
-REACT_APP_REDIRECT_URI=https://dev.reittiloki.hsl.fi
+REACT_APP_REDIRECT_URI=https://devtest.reittiloki.hsl.fi
 REACT_APP_AUTH_SCOPE=email+https://oneportal.trivore.com/scope/groups.readonly
 
 # Change this to false in production.
 REACT_APP_ALLOW_DEV_LOGIN=false
 
 # The current production URL. Update when/if it changes.
-REACT_APP_PRODUCTION_URL=https://dev.reittiloki.hsl.fi
+REACT_APP_PRODUCTION_URL=https://devtest.reittiloki.hsl.fi
 
 # The timezone for all dates and times in the app. For HSL this should be
 # Europe/Helsinki since all scehdules are in Finnish time. Change this
