--- a/.env.local
+++ b/.env.local
@@ -23,3 +23,4 @@ REACT_APP_PRODUCTION_URL=https://reittiloki.hsl.fi
 REACT_APP_TIMEZONE=Europe/Helsinki
 
 REACT_APP_MAPILLARY_CLIENT_TOKEN=MLY|4417181845065987|5e7cb47b1a13698f243e25f0cfdbf31f
+REACT_APP_DIGITRANSIT_API_KEY=
