--- a/.env.prod
+++ b/.env.prod
@@ -27,3 +27,4 @@ REACT_APP_TIMEZONE=Europe/Helsinki
 REACT_APP_FMI_APIKEY=4a22a195-10be-404f-8056-e8aaf5f7506a
 
 REACT_APP_MAPILLARY_CLIENT_TOKEN=MLY|4699140670124156|c0617576966bc69ea39fb284a78df199
+REACT_APP_DIGITRANSIT_API_KEY=
