--- a/.env.local
+++ b/.env.local
@@ -22,5 +22,6 @@ REACT_APP_PRODUCTION_URL=https://reittiloki.hsl.fi
 # transport networks. All times will be converted into this timezone.
 REACT_APP_TIMEZONE=Europe/Helsinki
 
+REACT_APP_DIGITRANSIT_URL=https://api.digitransit.fi/
 REACT_APP_MAPILLARY_CLIENT_TOKEN=MLY|4417181845065987|5e7cb47b1a13698f243e25f0cfdbf31f
 REACT_APP_DIGITRANSIT_API_KEY=
