--- a/.env.dev
+++ b/.env.dev
@@ -25,4 +25,6 @@ REACT_APP_TIMEZONE=Europe/Helsinki
 # API key for weather data
 REACT_APP_FMI_APIKEY=4a22a195-10be-404f-8056-e8aaf5f7506a
 
+REACT_APP_DIGITRANSIT_URL=https://api.digitransit.fi/
 REACT_APP_MAPILLARY_CLIENT_TOKEN=MLY|4648891498509284|8e5e3395c54d64ca14b62c79ceb3e16c
+REACT_APP_DIGITRANSIT_API_KEY=
